--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
             <nav class="navbar navbar-expand-sm bg-light navbar-light">
                 <ul class="navbar-nav">
                     <a class="navbar-brand">JavaScript</a>
-                    <li onclick="navbar('ques1')" class="nav-item active">
+                    <li id="link1" onclick="navbar('ques1')" class="nav-item active">
                         <a  class="nav-link">Ques 1</a>
                     </li>
-                    <li onclick="navbar('ques2')" class="nav-item">
+                    <li id="link2" onclick="navbar('ques2')" class="nav-item">
                         <a   class="nav-link">Ques 2</a>
                     </li>
                 </ul>
