Separating code in files according to concerns

--- a/index.html
+++ b/index.html
@@ -1,11 +1,7 @@
 <html>
     <head>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <style>
-        li > a{
-            cursor:pointer;
-        }
-    </style>
+    <link href="./css/main.css" rel="stylesheet" />
     </head>
     <body>
         <div class="container">
@@ -41,5 +37,7 @@
             </div>
         </div>
     </body>
-    <script src="./main.js"></script>
+    <script src="./js/main.js"></script>
+    <script src="./js/ques1.js"></script>
+    <script src="./js/ques2.js"></script>
 </html>
