--- a/index.html
+++ b/index.html
@@ -9,29 +9,53 @@
                 <ul class="navbar-nav">
                     <a class="navbar-brand">JavaScript</a>
                     <li id="link1" onclick="navbar('ques1')" class="nav-item active">
-                        <a  class="nav-link">Ques 1</a>
+                        <a class="nav-link">Ques 1</a>
                     </li>
                     <li id="link2" onclick="navbar('ques2')" class="nav-item">
-                        <a   class="nav-link">Ques 2</a>
+                        <a class="nav-link">Ques 2</a>
                     </li>
                 </ul>
             </nav>
             <div class="container" id="ques1">
-                <div class="row" style="margin:2%;">
+                <div class="row" >
                     <div class="col-md-2">
                         <button class="btn btn-primary" onclick="addNewCounter();" >Add Counter</button>                
                     </div>
                 </div>
+
+                <div class="row counter d-none" >
+                    <div class="col-md-1 countercount"></div>
+                    <div class="col-md-1">
+                        <button  type="button" class="btn btn-secondary decrement btn-sm">
+                            &#8722;                           
+                        </button>
+                    </div>
+                    <div class="col-md-2">
+                        <div class="form-group">
+                            <input value="0" type="number" disabled class="form-control">
+                        </div>
+                    </div>
+                    <div class="col-md-1">
+                        <button type="button" class="btn btn-secondary increment btn-sm">
+                        &#x2b;
+                        </button>
+                    </div>
+                    <div class="col-md-1">
+                        <button type="button" class="btn btn-danger delete btn-sm">
+                            Delete
+                        </button>
+                    </div>
+                 </div>
+
             </div>
             <div class="container d-none" id="ques2">
-                <div class="row" style="margin:2%;">
+                <div class="row">
                     <div class="col-md-2">
                         <button class="btn btn-primary" onclick="move(2);" >Move</button>                
                     </div>
                 </div>
-                <div class="row" style="margin:2%;">
-                    <div id="box" style="height:40px; background:red;" class="col-md-1">
-                                        
+                <div class="row">
+                    <div id="box" class="col-md-1">         
                     </div>
                 </div>
             </div>
